  * ud-fingerserv: update Net::LDAP import
  * Implement audit logging for ldap
  * stop running ud-generate if nothing has changed, based on audit logs

  [ Martin Zobel-Helas ]
  * ud-generate: generate webPasswords
  * ud-replicate: set correct permissions for web-passwords
  * add freecdb to depends
  * userdir-ldap.schema
    - add webPasswords
    - add mailPreserveSuffixSeperator

 -- Peter Palfrader <weasel@debian.org>  Wed, 11 Apr 2012 10:55:17 +0200

userdir-ldap (0.3.79) unstable; urgency=low

  * Add ud-sync-accounts-to-afs, a script to sync accounts to an
    AFS protection database.
  * ud-generate:
    - support host ACLs that expire.
    - lock output directory when generating.
    - support sync keyring dirs now too.
  * ud-useradd: A new -g switch for adding guest accounts, with
    proper setting hostacls and shadowexpire and picking the
    right keyring.
  * Remove .pgp (v3 pgp key) keyrings from config.
  * Update guest welcome template.
  * ud-gpgimport: handle guest keyrings.
  * ud-mailgate:
    - Make updating of gender actually work.
    - Do not mess with sudo passwords if nothing changed.
  * templates/change-reply: say a word about subjects in mail to admin@db.
  * move gpgwrapper to unmaintained/ - it is now using obsolete interfaces.
  * try to properly handle some more mime stuff.
    - use email module instead of deprecated mimetools and multifile modules
    - changes: sigcheck ud-echelon ud-mailgate userdir_gpg.py
  * move ud-echelon and sigcheck to GPGCheckSig2 interface.

 -- Peter Palfrader <weasel@debian.org>  Sat, 21 May 2011 14:53:18 +0200

userdir-ldap (0.3.78) unstable; urgency=low

  * Start refactoring ud-generate:
    - If environment variables UD_CREDENTIALS, UD_GENERATEDIR, UD_HMAC_KEY
      are set, use their respective value instead of the default.  This
      makes it possible to run ud-generate as a non-privileged user for
      testing purposes.