@@ -79,10 +79,12 @@ access to attrs=facsimileTelephoneNumber,telephoneNumber,postalAddress,postalCod
 	by dn.regex="uid=.*,ou=users,@@DN@@" read
 	by * none
 
-
 # rest is globally readable
-access to *
+access to access,accountComment,accountStatus,admin,allowedGroups,allowedHost,architecture,bandwidth,cn,comment,dc,description,disk,distribution,dn,dnsTTL,dnsZoneEntry,exportOptions,gecos,gid,gidNumber,homeDirectory,host,hostname,icqUin,ipHostNumber,ircNick,jabberJID,keyFingerPrint,labeledURI,mXRecord,machine,member,memory,mn,objectClass,ou,physicalHost,purpose,shadowExpire,shadowLastChange,shadowMax,shadowMin,shadowWarning,sn,sponsor,sponsor-admin,sshRSAHostKey,status,subGroup,supplementaryGid,uid,uidNumber
 	by * read
+
+access to *
+	by * none
 
 
 database hdb
