@@ -68,7 +68,11 @@ userdir-ldap (0.3.80) UNRELEASED; urgency=low
     - add webPasswords
     - add mailPreserveSuffixSeperator
 
- -- Peter Palfrader <weasel@debian.org>  Wed, 11 Apr 2012 10:55:17 +0200
+  [ Peter Palfrader ]
+  * userdir-ldap-slapd.conf.in: explicitly list readable attributes.
+    End with 'by * none'.
+
+ -- Peter Palfrader <weasel@debian.org>  Mon, 14 May 2012 18:45:07 +0200
 
 userdir-ldap (0.3.79) unstable; urgency=low
 
